Testing: changed figure height back to 55%, changed fixed-wrap to 50%

--- a/style.css
+++ b/style.css
@@ -406,7 +406,7 @@ figure {
   position: relative;
   width: 100%;
   /* height: 55%; */
-  height: 25%;
+  /* height: 25%; */
   margin: 0!important;
 }
 
@@ -416,7 +416,8 @@ figure {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
+  height: 50%;
 }
 #fixed {
   background-image: url('img/cropped-Blockchain-chains-1.png');
